annotate Auth endpoints
