# backend-gin/internal/api/routes/hello_world.go
@@ -9,12 +9,27 @@ import (
 	"github.com/gin-gonic/gin"
 )
 
+type ResponseExample struct {
+	Message string `json:"message"`
+}
+
+// @Summary      Hello World Endpoint
+// @Tags         Hello World
+// @Produce      json
+// @Success      200  {object}  ResponseExample
+// @Router       /api/hello-world/ [get]
 func hello(c *gin.Context) {
 	c.JSON(http.StatusOK, gin.H{
 		"message": "Hello World!",
 	})
 }
 
+// @Summary      Hello World Endpoint for authenticated users
+// @Tags         Hello World
+// @Produce      json
+// @Security     OAuth2Password[admin]
+// @Success      200  {object}  ResponseExample
+// @Router       /api/hello-world/user [get]
 func helloUser(c *gin.Context) {
 	user := c.MustGet("currentUser").(schemas.UserRead)
 	message := fmt.Sprintf("Hello %s!", user.Name)
@@ -23,6 +38,12 @@ func helloUser(c *gin.Context) {
 	})
 }
 
+// @Summary      Hello World Endpoint for admins only
+// @Tags         Hello World
+// @Produce      json
+// @Security     OAuth2Password[admin]
+// @Success      200  {object}  ResponseExample
+// @Router       /api/hello-world/admin [get]
 func helloAdmin(c *gin.Context) {
 	user := c.MustGet("currentUser").(schemas.UserRead)
 	message := fmt.Sprintf("Hello Admin %s!", user.Name)
